syntax = "proto3";

option java_package = "org.sample.proto";
option java_outer_classname = "AcceptProto";
option java_multiple_files = true;

// Array wrapper for Accept messages
message AcceptArray {
  repeated AcceptMessage accepts = 1;
}

// Accept message representing the Paxos Accept record
message AcceptMessage {
  int32 from = 1;
  SlotTermMessage slot_term = 2;
  AbstractCommandMessage command = 3;
}

// SlotTerm message 
message SlotTermMessage {
  int64 log_index = 1;
  BallotNumberMessage number = 2;
}

// BallotNumber message
message BallotNumberMessage {
  int32 era = 1;
  int32 counter = 2;
  int32 node_identifier = 3;
}

// AbstractCommand as a oneof to represent the sealed interface
message AbstractCommandMessage {
  oneof command_type {
    NoOperationMessage no_operation = 1;
    CommandMessage command = 2;
  }
}

// NoOperation message (just a marker)
message NoOperationMessage {
  // Empty message representing NOOP
}

// Command message
message CommandMessage {
  string uuid = 1;           // UUID as string
  bytes operation_bytes = 2; // byte array
  int32 flavour = 3;         // byte as int32
}