syntax = "proto3";

package simple;

option java_package = "org.sample.proto";
option java_outer_classname = "SimpleProto";

message TestRecord {
  string name = 1;
  int32 value = 2;
  int64 timestamp = 3;
  bool active = 4;
}